fix: Fixed dropdown overflow on tablet.

--- a/src/components/Cart/CartOrders/CartOrders.module.scss
+++ b/src/components/Cart/CartOrders/CartOrders.module.scss
@@ -4,7 +4,6 @@
 .list {
   padding-bottom: 80px;
   max-height: 50vh;
-  padding-right: 10px;
   overflow: auto;
 
   display: flex;
@@ -139,6 +138,10 @@
   display: flex;
   justify-content: space-between;
   gap: 20px;
+}
+
+.select_section {
+  padding-right: 25px;
 }
 
 .price {
